<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.telahome.campobomparaoesporte.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.telahome.campobomparaoesporte.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="" />
    <fragment
        android:id="@+id/map"
        android:name="com.telahome.campobomparaoesporte.ui.home.HomeFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/activity_maps" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.telahome.campobomparaoesporte.ui.criarEsportes.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_criaresportes" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.telahome.campobomparaoesporte.ui.configuracaoConta.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.telahome.campobomparaoesporte.ui.compartilharApp.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.telahome.campobomparaoesporte.ui.enviarDadosLocal.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>